# city-simulation-service

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: application.yml
app/: config.py
app/core/: people.py  simulation.py
app/models/: building.py  errors.py  hex_coordinate.py  location.py  person.py  snapshot.py
app/repositories/: people.py  people_snapshot.py
app/repositories/in_memory/: buildings.py  indexes.py  locations.py  people.py
app/repositories/text_file/: buildings_snapshot.py  people_snapshot.py  snapshot.py
app/routers/: buildings.py  dependables.py  dependencies.py  hello.py  locations.py  people.py  simulation.py
app/routers/schemas/: building.py  distance.py  location.py  person.py
app/runner/: cli.py  config.py  dependencies.py  factory.py  fastapi.py  websocket.py
app/services/: actions.py  building.py  buildings.py  hex_coordinate_strategies.py  initialize.py  locations.py  movement.py  people.py  simulation.py  snapshot.py  websocket.py  world_entities.py
app/services/actions/: __init__.py  actions.py  strategies.py
static/: index.html
tests/: fake.py
tests/integration/fastapi/: conftest.py  test_buildings.py  test_locations.py  test_people.py  test_simulation.py
tests/unit/repository/: test_buildings.py  test_index.py  test_people.py  test_snapshot.py
tests/unit/service/: test_actions.py  test_initializer.py  test_movement.py  test_snapshot.py  test_world_entities.py
