[project]
name = "city-simulation"
version = "0.1.0"
description = "Simulates city behavior"
readme = "README.md"
authors = [
    { name = "Schwifter", email = "d.goglidze@sangu.edu.ge" }
]
dynamic = ["dependencies"]
requires-python = ">=3.13"

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.128.0"}
pydantic = "^2.12.5"
typer = "^0.21.0"
websockets = "^16.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
faker = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
]

lint.select = ["E", "F", "I"]
lint.ignore = []
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

[tool.ruff.lint.isort]
forced-separate = ["tests", "app"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = [
    "app/models",
    "app/repositories",
    "app/routers",
    "app/services",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true
